# llmkit

./: .gitignore  .pre-commit-config.yaml  ALIGNMENT_VERIFICATION_INDEX.md  API_ALIGNMENT_VERIFICATION.md  AUDIT_MODELS_REPORT.md  AUDIT_README.md  AUDIT_SUMMARY.md  BENCHMARKS.md  BENCHMARK_ISSUES_DETAILED.txt  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_MODELS_TO_FIX.txt  CROSS_LANGUAGE_API_SUMMARY.md  CROSS_PROVIDER_MATRIX.md  Cargo.toml  DETAILED_AUDIT_EVIDENCE.md  DOCUMENTATION_CLEANUP_REPORT.md  FEATURES_GAP_ANALYSIS.md  FEATURES_GUIDE.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_BINDING_ANALYSIS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  MODEL_AUDIT_FINDINGS.md  MODEL_AUDIT_INDEX.md  MODEL_COVERAGE_GAPS_DETAILED.md  PHASE_COMPLETION_SUMMARY.md  PRICING_AUDIT_SUMMARY.md  PRICING_FIXES_QUICK_REFERENCE.md  PROVIDERS.md  PROVIDER_GAPS_EXECUTIVE_SUMMARY.md  PROVIDER_MATRIX.md  PROVIDER_RESEARCH_COMPREHENSIVE_REPORT.md  Q1_2026_COMPLETION_REPORT.md  README.md  REGISTRY_RESEARCH_EXECUTIVE_SUMMARY.md  RELEASE_NOTES.md  (+12 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benches/: circuit_breaker_bench.rs  comprehensive_comparison.rs  observability_bench.rs  rate_limiter_bench.rs  smart_router_bench.rs  streaming_multiplexer_bench.rs
docs/: API_OUTREACH_EMAILS.md  EXECUTION_READINESS_STATUS.md  INDEX.md  MODELS_REGISTRY.md  MODEL_INTEGRATION_ANALYSIS.md  MODEL_REGISTRY_EXPANSION_PLAN.md  PHASE_1_IMPLEMENTATION_GUIDE.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PRE_IMPLEMENTATION_SETUP.md  PRE_IMPLEMENTATION_SUMMARY.md  PROVIDER_MODEL_SOURCES.md  Q1_2026_ROADMAP_VISUAL.md  TEAM_COORDINATION_GUIDE.md  WEEKLY_STATUS_TEMPLATE.md  additional_providers.md  audio-api.md  comparison.md  domain_models.md  emerging_specialized_providers.md  getting-started-nodejs.md  getting-started-python.md  getting-started-rust.md  github_project_tasks.md  image-api.md  implementation_roadmap_q1_2026.md  implementation_status_summary.md  litellm.md  litellm_unique_providers.md  llmkit.md  model_verification_checklist.md  models_comparison.md  plan_20260103.md  plan_to_release_010_20260101.md  production_readiness_20260101.md  project_status_q1_2026.md  providers_detailed_comparison.md  scientific_benchmarks.md  specialized-api.md  video-api.md
examples/: 01_simple_completion.rs  02_streaming.rs  03_tool_calling.rs  04_vision.rs  05_structured_output.rs  06_extended_thinking.rs  08_error_handling.rs  09_async_usage.rs  10_batch_processing.rs  11_embeddings.rs  12_audio_synthesis.rs  13_audio_transcription.rs  14_image_generation.rs  15_specialized_api.rs  16_video_generation.rs  17_response_caching.rs  18_retry_resilience.rs  19_openai_compatible.rs  README.md  multiple_providers.rs  python_audio_synthesis.py  python_audio_transcription.py  python_image_generation.py  python_specialized_api.py  python_video_generation.py  simple_completion.rs  streaming.rs  structured_output.rs  test_phase1_models.rs  tool_calling.rs  typescript_audio_synthesis.ts  typescript_audio_transcription.ts  typescript_image_generation.ts  typescript_specialized_api.ts  typescript_video_generation.ts  vision.rs
hooks/: pre-commit
llmkit-js/: Cargo.toml  package.json
llmkit-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
llmkit-node/src/: audio.rs  client.rs  image.rs  lib.rs  models.rs  realtime.rs  retry.rs  specialized.rs  stream_internal.rs
llmkit-node/src/types/: embedding.rs  enums.rs  message.rs  mod.rs  request.rs  response.rs  stream.rs
llmkit-node/tests/: audio.test.ts  image.test.ts  integration.test.ts  specialized.test.ts  unit.test.ts  video.test.ts
llmkit-python/: Cargo.toml  README.md  package.json  pdm.toml  pnpm-lock.yaml  pyproject.toml
llmkit-python/llmkit/: __init__.py  __init__.pyi
llmkit-python/src/: async_client.rs  client.rs  embedding.rs  lib.rs  models.rs  realtime.rs  retry.rs  tools.rs
llmkit-python/src/audio/: mod.rs
llmkit-python/src/image/: mod.rs
llmkit-python/src/specialized/: mod.rs
llmkit-python/src/types/: enums.rs  message.rs  request.rs  stream.rs
llmkit-python/src/video/: mod.rs
llmkit-python/tests/: test_async.py  test_audio.py  test_image.py  test_integration.py  test_llmkit.py  test_specialized.py  test_video.py
modelsuite-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
modelsuite-python/: Cargo.toml  README.md  pyproject.toml
modelsuite-python/modelsuite/: __init__.py  __init__.pyi
modelsuite-python/src/: async_client.rs  client.rs  embedding.rs  errors.rs  lib.rs  models.rs  retry.rs  tools.rs
modelsuite-python/src/audio/: mod.rs
modelsuite-python/src/specialized/: mod.rs
modelsuite-python/src/types/: enums.rs  message.rs  mod.rs  request.rs  response.rs  stream.rs
modelsuite-python/src/video/: mod.rs
modelsuite-python/tests/: test_async.py  test_audio.py  test_image.py  test_integration.py  test_llmkit.py  test_modelsuite.py  test_specialized.py  test_video.py
scripts/: clean_csv_unicode.py  compile_all_models.py  compiled_models.txt  csv_to_pipe_format.py  fetch_anthropic.py  fetch_baichuan.py  fetch_bedrock.py  fetch_cerebras.py  fetch_cohere.py  fetch_deepgram.py  fetch_deepseek.py  fetch_elevenlabs.py  fetch_fireworks.py  fetch_google.py  fetch_groq.py  fetch_hyperbolic.py  fetch_jina.py  fetch_minimax.py  fetch_mistral.py  fetch_moonshot.py  fetch_nebius.py  fetch_novita.py  fetch_openai.py  fetch_openrouter.py  fetch_perplexity.py  fetch_qwen.py  fetch_sambanova.py  fetch_spark.py  fetch_stability.py  fetch_together_ai.py  fetch_together_ai_comprehensive.py  fetch_volcengine.py  fetch_voyage.py  fetch_yi.py  fetch_zhipu.py  fireworks_entries.txt  generate-openai-compatible.sh  generate_model_data.py  model_data_complete.txt  setup-hooks.sh  (+2 more)
src/: audio.rs  cache.rs  circuit_breaker.rs  client.rs  embedding.rs  error.rs  failover.rs  guardrails.rs  health.rs  image.rs  lib.rs  metering.rs  models.rs  observability.rs  pool.rs  provider.rs  rate_limiter.rs  retry.rs  smart_router.rs  specialized.rs  (+7 more)
(+333 files in other folders)
