[package]
name = "llmkit-python"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for LLMKit - Unified LLM API client"

[lib]
name = "llmkit"
crate-type = ["cdylib"]

[features]
default = ["vertex"]
vertex = ["llmkit/vertex", "dep:rustls"]

[dependencies]
# Core LLMKit library with all providers
llmkit = { path = "..", features = ["all-providers"] }

# TLS crypto provider for gcp_auth (Vertex AI)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }

# Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }

# Async support for Python
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Convert between Rust serde types and Python objects
pythonize = "0.27"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"

# For stream handling
tokio-stream = "0.1"
async-stream = "0.3"

# Serialization (re-export from llmkit)
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.27"
