[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "llmkit-python"
version = "0.1.3"
description = "Production-grade LLM client for Python - 100+ providers, 11,000+ models. Rust-powered."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["llm", "ai", "openai", "anthropic", "claude", "gpt", "llama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/yfedoseev/llmkit"
Repository = "https://github.com/yfedoseev/llmkit"
Documentation = "https://github.com/yfedoseev/llmkit#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "llmkit._llmkit"
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = true
exclude = [".venv", "build", "dist", "__pycache__"]
ignore_missing_imports = false
disable_error_code = ["comparison-overlap", "untyped-decorator", "no-untyped-def"]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [".venv", "build", "dist", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # Line too long (black handles this)
    "E741",   # Ambiguous variable name
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
  \.venv
  | build
  | dist
)/
'''

[tool.ty]
python_version = "3.8"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
